<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="omada_id">ID Ομάδας: </string>
    <string name="omada_name">Όνομα Ομάδας: </string>
    <string name="omada_stadio">Στάδιο Ομάδας: </string>
    <string name="omada_poli">Πόλη Ομάδας: </string>
    <string name="omada_xora">Χώρα Ομάδας: </string>
    <string name="omada_sid">ID Αθλήματος Ομάδας: </string>
    <string name="omada_date">Έτος Ίδρυσης Ομάδας: </string>

    <string name="res_id">ID Αγώνα: </string>
    <string name="comp_date">Ημ/νια Αγώνα: </string>
    <string name="comp_country">Χώρα: </string>
    <string name="comp_poli">Πόλη: </string>
    <string name="onoma_sp">Όνομα Αθλήματος: </string>

</resources>