<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    app:cardBackgroundColor="#F1FCFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <TextView
            android:id="@+id/TvQuery11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/res_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/TvQuery1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/TvUpdate"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:layout_toEndOf="@id/TvQuery11"
            android:textAppearance="@style/TextAppearance.AppCompat.Small">

        </TextView>

        <TextView
            android:id="@+id/TvQuery22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery11"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/comp_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/TvQuery2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery1"
            android:layout_toStartOf="@id/TvDelete"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:layout_toEndOf="@id/TvQuery22"
            android:textAppearance="@style/TextAppearance.AppCompat.Small">

        </TextView>

        <TextView
            android:id="@+id/TvQuery33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery22"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/comp_country"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/TvQuery3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery2"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/TvQuery33"
            android:textAppearance="@style/TextAppearance.AppCompat.Small">

        </TextView>

        <TextView
            android:id="@+id/TvQuery44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery33"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/comp_poli"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/TvQuery4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery3"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:textAlignment="textStart"
            android:layout_toEndOf="@id/TvQuery44"
            android:textAppearance="@style/TextAppearance.AppCompat.Small">

        </TextView>

        <ImageView
            android:id="@+id/TvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_baseline_edit_24" />

        <TextView
            android:id="@+id/TvQuery55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery44"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:text="@string/onoma_sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/TvQuery5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery4"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:layout_toEndOf="@id/TvQuery55"
            android:textAlignment="textStart"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small">

        </TextView>

        <ImageView
            android:id="@+id/TvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvQuery1"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_baseline_delete_24" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>